added CSS background, added ul in index.html

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -12,6 +12,9 @@
       <h2>Check the console...</h2>
     </header>
     <!-- create an ordered list with any questions you have on this week's material -->
-
+<ul>
+  <li>Please review for of loops</li>
+  <li>Review of the stretch tasks</li>
+</ul>
   </body>
 </html>
